@@ -1,5 +1,10 @@
 2006-02-10 Peter Bienstman  <Peter.Bienstman@UGent.be>
 
+	* slaboverlap.h: Numerical overlap of off-axis modes.
+	* slaboverlap.cpp: Ditto.
+
+2006-02-10 Peter Bienstman  <Peter.Bienstman@UGent.be>
+
         * slabmode.cpp: Don't add PML twice.
 
 2006-02-09 Peter Bienstman  <Peter.Bienstman@UGent.be>
